use cached vertical slide

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ Nagios::Configuration.find('server', 'server1').first(:check_disk).value
   </div>
 
   <script src="lib/js/head.min.js"></script>
-  <script src="js/reveal.min.js"></script>
+  <script src="js/reveal.js"></script>
   <script src="js/jquery.js"></script>
 
   <style>
