--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Nagios::Configuration.first('server', 'server1').first(:check_disk).options
             <h3 class="fragment"><span class="yellow simple"><br/>简单？</span></h3>
 
             <div class="fragment toggle_simple">
-              <h3><span class="yellow similar"><br/>十分相似！<br></span></h3>
+              <h3><span class="yellow similar"><br/>相似！<br></span></h3>
             </div>
 
             <h3 class="fragment toggle_similar"><span class="yellow"><br/>枯燥 &amp;&amp; 乏味 &amp;&amp; 重复</span><br></h3>
