Add baidu tongji

--- a/index.html
+++ b/index.html
@@ -521,5 +521,10 @@ end
     jQuery('.draft').remove();
   }
   </script>
+
+  <script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F4319f0de0c65dd6ecbf41c37a0d82786' type='text/javascript'%3E%3C/script%3E"));
+  </script>
   </body>
 </html>
