--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ Nagios::Configuration.first('server', 'server1').first(:check_disk).options
             </div>
           </section>
           <section>
-            <h3>怎么取数据?</h3>
+            <h3>API</h3>
             <pre>
             <code>= Class methods:
 first
